--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
    },
    "dependencies": {
       "cors": "^2.8.5",
+      "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "express-async-errors": "^3.1.1",
       "mysql2": "^3.3.3",
@@ -24,6 +25,7 @@
    "scripts": {
       "build": "tsc",
       "dev:server": "ts-node-dev src/server.ts",
-      "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+      "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+      "start": "node ./build/server.js"
    }
 }
