Commit para adicionar a chamada da API onde estão os produtos

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 MYSQL_HOST="localhost"
 MYSQL_USER="root"
-MYSQL_PASS="Yasminlinda13@"
+MYSQL_PASS="root"
 MYSQL_PORT=3306
-MYSQL_DBNAME="projeto_db"
+MYSQL_DBNAME="projeto1_db"
 PORT=3333
+SECRET="Gama-20223"
