--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
    "devDependencies": {
       "@types/cors": "^2.8.13",
       "@types/express": "^4.17.17",
+      "@types/jsonwebtoken": "^9.0.2",
       "@types/node": "^16.11.10",
       "@types/swagger-ui-express": "^4.1.3",
       "ts-node": "10.7.0",
@@ -13,11 +14,14 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "axios": "^1.4.0",
       "cors": "^2.8.5",
       "dotenv": "^16.3.1",
       "express": "^4.18.2",
       "express-async-errors": "^3.1.1",
+      "jsonwebtoken": "^9.0.0",
       "mysql2": "^3.3.3",
+      "pg": "^8.11.0",
       "reflect-metadata": "^0.1.13",
       "swagger-ui-express": "^4.6.3",
       "typeorm": "0.3.16"
