--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MYSQL_HOST="localhost"
 MYSQL_USER="root"
-MYSQL_PASS="root"
+MYSQL_PASS="Admin"
 MYSQL_PORT=3306
-MYSQL_DBNAME="projeto1_db"
+MYSQL_DBNAME="projeto_db"
 PORT=3333
 SECRET="Gama-20223"
